02-kubernetes/nodejs-app/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-api-lb
  labels:
    app: nodejs-api
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: nodejs-api
