02-kubernetes/nodejs-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-api-ingress
  labels:
    app: nodejs-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: karosiblog.com
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: nodejs-api-nodeport
                port:
                  number: 3000
